--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3947,7 +3947,7 @@ body.homepage.is-preload #header:after {
 .research-links a {
   display: flex;
   align-items: center;
-  /* padding: 0.8rem 1rem; */
+  padding: 0.8rem 0;
   border-radius: 6px;
   white-space: nowrap; /* 新增 */
   overflow: hidden;
