--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3958,6 +3958,7 @@ body.homepage.is-preload #header:after {
 
 .research-links a {
   display: flex;
+  gap: 1.2rem;
   align-items: center;
   padding: 0.75rem 1.25rem;
   border-radius: 8px;
