--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3377,11 +3377,8 @@ body.homepage.is-preload #header:after {
 }
 
 .resource-links h6 {
-  margin-top: 1px;
-}
-
-.resource-links h6 {
   display: flex;
+  margin-top: 1px;
   align-items: center;
   gap: 6px; /* 控制图标与文字的间距 */
 }
@@ -4006,8 +4003,8 @@ body.homepage.is-preload #header:after {
 /* 图标样式优化 */
 .research-links .icon {
   margin-right: 1rem;
-  width: 0.8em;
-  height: 0.8em;
+  width: 20px;
+  height: 20px;
   transition: color 0.2s ease;
 }
 
