--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2220,8 +2220,7 @@ button,
   text-align: center;
   border-radius: var(--radius-md);
   text-decoration: none;
-  padding: 4px 12px;
-  gap: 8px;
+  padding: 0.65em 3em 0.65em 3em;
   cursor: pointer;
   outline: 0;
   font-weight: 300;
